--- a/index.amp.html
+++ b/index.amp.html
@@ -439,7 +439,7 @@
 
         <div>
           <a href='https://t.ly/pacuwingacor' target=_blank rel="noopener noreferrer nofollow">
-            <amp-img style="border-radius: 10px;" src="https://ik.imagekit.io/0byuazqys/bola-wall5565.jpg?updatedAt=1708789061782" width="400"
+            <amp-img style="border-radius: 10px;" src="images/bola-wall.webp" width="400"
               height="400" layout="responsive" alt="PACUWIN"></amp-img>
           </a>
         </div>
