--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="canonical" href="index.html" />
-    <meta name="google-site-verification" content="" />
+    <meta name="google-site-verification" content="JLT4irhuMMMSTQmIuCwMiZ-Qv-Wl_lgKI8rV0Znt6Go" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan..." />
     <meta name="keywords" content="pacuwin, Daftar pacuwin, login pacuwin, link alternatif pacuwin" />
