--- a/index.amp.html
+++ b/index.amp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Pacuwin > Situs Game Online Terpercaya 2024</title>
-  <meta name="google-site-verification" content="" />
+  <meta name="google-site-verification" content="JLT4irhuMMMSTQmIuCwMiZ-Qv-Wl_lgKI8rV0Znt6Go" />
   <meta name="description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan..." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <meta name="keywords" content="pacuwin, Daftar pacuwin, login pacuwin, link alternatif pacuwin" />
