--- a/index.amp.html
+++ b/index.amp.html
@@ -35,7 +35,7 @@
   <meta name="geo.country" content="ID">
   <meta name="geo.region" content="ID" />
   <meta name="tgn.nation" content="Indonesia">
-  <link rel="canonical" href="index.amp.html" />
+  <link rel="canonical" href="index.html" />
   <link rel="preload" as="image" href="https://ik.imagekit.io/0byuazqys/bola-wall.jpg?updatedAt=1708789061782" />
   <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&amp;display=swap">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&amp;display=swap" rel="stylesheet">
