--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="canonical" href="index.html" />
     <meta name="google-site-verification" content="JLT4irhuMMMSTQmIuCwMiZ-Qv-Wl_lgKI8rV0Znt6Go" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan..." />
+    <meta name="description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga..." />
     <meta name="keywords" content="pacuwin, Daftar pacuwin, login pacuwin, link alternatif pacuwin" />
     <meta name="language" content="id,en">
     <meta name="distribution" content="Global" />
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="website" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:title" content="Pacuwin > Situs Game Online Terpercaya 2024" />
-    <meta name="twitter:description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga menyediakan..." />
+    <meta name="twitter:description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga..." />
     <meta name="twitter:image" content="logo.webp" />
     <link rel="amphtml" href="index.amp.html">
     <link rel="preconnect" href="https://ajax.googleapis.com/">
