--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
               <img class="logo" src="images/logo.webp" alt="pacuwin" width="80%">
             </span>
             <img src="images/bola-wall.webp" alt="pacuwin" width="100%"><br><br>
-            <a href="" rel="dofollow" target="_blank" class="btn-google shadow-login m-b-20">
+            <a href="https://pacuwin.shop/" rel="dofollow" target="_blank" class="btn-google shadow-login m-b-20">
               <span style="color:#FFF">L O G I N</span>
             </a>
-            <a href="" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
+            <a href="https://pacuwin.shop/register" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
               <span style="color:#FFF">D A F T A R</span>
             </a>
-            <a href="" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
+            <a href="https://rtp-pacuwin.online/" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
               <span style="color:#FFF">RTP GACOR</span>
             </a>
-            <a href="" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
+            <a href="https://direct.lc.chat/17211033/" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
               <span style="color:#FFF">L I V E C H A T</span>
             </a>
           </div>
