--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
               <img class="logo" src="images/logo.webp" alt="pacuwin" width="80%">
             </span>
             <img src="images/bola-wall.webp" alt="pacuwin" width="100%"><br><br>
-            <a href="https://bit.ly/3VlXcRk" rel="dofollow" target="_blank" class="btn-google shadow-login m-b-20">
+            <a href="https://www.pacuwin.store/register?ref=AF5MPMO0T" rel="dofollow" target="_blank" class="btn-google shadow-login m-b-20">
               <span style="color:#FFF">L O G I N</span>
             </a>
-            <a href="https://bit.ly/3VlXcRk" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
+            <a href="https://www.pacuwin.store/register?ref=AF5MPMO0T" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
               <span style="color:#FFF">D A F T A R</span>
             </a>
             <a href="https://rtp-pacuwin.online/" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
